crates/tabella/tests/snapshots/contract__get_a_document_without_frontmatter.snap
---
source: crates/tabella/tests/contract.rs
expression: pretty(&got)
---
{
  "body": "just prose, no fence\n\nand a second paragraph\n",
  "core": "tabella",
  "ext": "md",
  "home": "ecv",
  "slug": "handmade",
  "tags": [],
  "type": null
}
