crates/tabella/tests/snapshots/contract__on_disk_cascaded_ref.snap
---
source: crates/tabella/tests/contract.rs
expression: cascaded
---
{
  "refs": [
    "tabella:journey"
  ],
  "data": {}
}
