crates/tabella/tests/snapshots/contract__on_disk_document_file.snap
---
source: crates/tabella/tests/contract.rs
expression: text
---
+++
type = "nota"
tags = ["travel"]
+++

Two weeks in Rome.
