crates/tabella/tests/snapshots/contract__on_disk_frontmatter_grown_over_existing_prose.snap
---
source: crates/tabella/tests/contract.rs
expression: "read_doc(&root, \"ecv_handmade.md\")"
---
+++
type = "nota"
tags = []
+++

just prose, no fence

and a second paragraph
