crates/tabella/tests/snapshots/contract__on_disk_hand_written_frontmatter_survives.snap
---
source: crates/tabella/tests/contract.rs
expression: text
---
+++
# why this note exists
tags = ["vocatio"]
author = "a hand"
type = "principium"
+++

Prose.
