crates/tabella/tests/snapshots/contract__refusal_rename_onto_an_occupied_slug.snap
---
source: crates/tabella/tests/contract.rs
expression: pretty(&err)
---
{
  "error": {
    "code": 3,
    "msg": "tabella:journey already names a record at ecv — renaming onto it would make the two indistinguishable, and there is no history to tell them apart again (§7.2, §18)"
  }
}
