crates/tabella/tests/snapshots/contract__verb_add_fresh.snap
---
source: crates/tabella/tests/contract.rs
expression: pretty(&fresh)
---
{
  "body": "Two weeks in Rome.\n",
  "core": "tabella",
  "ext": "md",
  "home": "ecv",
  "slug": "trip_idea",
  "tags": [
    "travel"
  ],
  "type": "nota"
}
